Edited the About Paragraph and tried to fix the Header on mobile

--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -46,8 +46,6 @@
     flex-wrap: wrap;
 
     &-logo {
-      display: flex;
-      align-items: center;
       margin: 0 auto;
 
       > img {
